fix spacing on vehicle show page with availabilities when user does not own car

--- a/app/assets/stylesheets/availabilities.scss
+++ b/app/assets/stylesheets/availabilities.scss
@@ -28,6 +28,7 @@
   position: relative;
   padding: 10px;
   border-top: 2px solid goldenrod;
+  overflow: hidden;
 }
 
 #availability-start, #availability-end {
